# premerge-gate

./: .gitignore  action.yml  pyproject.toml
.github/workflows/: ai-review.yml
examples/: workflow-example.yml
src/: __init__.py  config.py  github_client.py  language_detector.py  main.py
src/review/: graph.py  prompts.py  state.py
src/review/nodes/: __init__.py  bug_logic_review.py  decision_engine.py  engineering_quality.py  intent_analysis.py  production_readiness.py  report_generator.py
tests/: __init__.py  test_decision_engine.py  test_language_detector.py
